# autoware_perception

./: .gitmodules  README.md  setup.sh
ansible/: README  localhost-setup-devpc.yml
autoware_msgs/: CMakeLists.txt  package.xml
autoware_msgs/msg/: State.msg
dynamic_object_visualization/: CMakeLists.txt  package.xml
dynamic_object_visualization/include/dynamic_object_visualization/: dynamic_object_visualizer.h
dynamic_object_visualization/launch/: dynamic_object_visualizer.launch
dynamic_object_visualization/src/: dynamic_object_visualizer.cpp  main.cpp
euclidean_cluster/: CMakeLists.txt  nodelets.xml  package.xml
euclidean_cluster/include/euclidean_cluster/: euclidean_cluster_nodelet.h  voxel_grid_based_euclidean_cluster_nodelet.h
euclidean_cluster/launch/: euclidean_cluster.launch  voxel_grid_based_euclidean_cluster.launch
euclidean_cluster/src/: euclidean_cluster_node.cpp  euclidean_cluster_nodelet.cpp  voxel_grid_based_euclidean_cluster_node.cpp  voxel_grid_based_euclidean_cluster_nodelet.cpp
lidar_apollo_cnn_seg_detect/: CMakeLists.txt
lidar_apollo_cnn_seg_detect/include/: cluster2d.h  cnn_segmentation.h
lidar_apollo_cnn_seg_detect/launch/: lidar_apollo_cnn_seg_detect.launch
lidar_apollo_cnn_seg_detect/nodes/: cnn_segmentation.cpp
lidar_point_pillars/: CMakeLists.txt  package.xml
lidar_point_pillars/launch/: lidar_point_pillars.launch
lidar_point_pillars/nodes/: point_pillars_ros.cpp
map_based_prediction/: CMakeLists.txt  package.xml
map_based_prediction/include/: map_based_prediction.h  map_based_prediction_ros.h  vectormap_ros.h  vectormap_struct.h
map_based_prediction/launch/: map_based_prediction.launch
map_based_prediction/src/: map_based_prediction.cpp  map_based_prediction_main.cpp  map_based_prediction_ros.cpp  vectormap_ros.cpp
multi_object_tracker/: CMakeLists.txt  package.xml
multi_object_tracker/include/multi_object_tracker/: node.hpp
multi_object_tracker/include/multi_object_tracker/data_association/: data_association.hpp
multi_object_tracker/include/multi_object_tracker/tracker/: tracker.hpp
multi_object_tracker/include/multi_object_tracker/tracker/model/: bicycle_tracker.hpp  pedestrian_tracker.hpp  tracker_base.hpp  vehicle_tracker.hpp
multi_object_tracker/include/multi_object_tracker/utils/: utils.hpp
multi_object_tracker/launch/: multi_object_tracker.launch
multi_object_tracker/src/: main.cpp  node.cpp
multi_object_tracker/src/data_association/: data_association.cpp
multi_object_tracker/src/data_association/hungarian/: hungarian.cc  hungarian.h  hungarian_test.cc
multi_object_tracker/src/data_association/hungarian_assigner/: hungarian_assigner.cpp  hungarian_assigner.hpp  visibility_control.hpp
multi_object_tracker/src/data_association/successive_shortest_path/: successive_shortest_path.cpp  successive_shortest_path.h
multi_object_tracker/src/tracker/model/: bicycle_tracker.cpp  pedestrian_tracker.cpp  tracker_base.cpp  vehicle_tracker.cpp
multi_object_tracker/src/utils/: utils.cpp
naive_path_prediction/: CMakeLists.txt  package.xml
naive_path_prediction/launch/: naive_path_prediction.launch
naive_path_prediction/src/: node.cpp
perception_launch/: CMakeLists.txt  package.xml
perception_launch/launch/: perception.launch  perception_baidu_seg.launch  perception_lgsvl.launch  perception_with_pointpillars.launch  perception_with_vscan.launch
perception_launch/launch/detection/: camera_lidar_fusion_based_detection.launch  detection.launch  lidar_based_detection.launch
perception_launch/launch/prediction/: prediction.launch
perception_launch/launch/tracking/: tracking.launch
pointcloud_to_laserscan/: CMakeLists.txt  package.xml
pointcloud_to_laserscan/launch/: vscan.launch
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
points_preprocessor/: CMakeLists.txt  package.xml
points_preprocessor/cfg/: CompareMapFilter.cfg
points_preprocessor/include/points_preprocessor/: filter.h
points_preprocessor/include/points_preprocessor/compare_map_filter/: distance_based_compare_map_filter_nodelet.h  octree_based_compare_map_filter_nodelet.h  voxel_based_approximate_compare_map_filter_nodelet.h  voxel_based_compare_map_filter_nodelet.h  voxel_distance_based_compare_map_filter_nodelet.h
points_preprocessor/launch/: compare_map_filter.launch  preprocessor.launch
points_preprocessor/plugins/nodelet/: libcompare_map_filter.xml
points_preprocessor/src/: filter.cpp
points_preprocessor/src/compare_map_filter/: distance_based_compare_map_filter_node.cpp  distance_based_compare_map_filter_nodelet.cpp  octree_based_compare_map_filter_node.cpp  octree_based_compare_map_filter_nodelet.cpp  voxel_based_approximate_compare_map_filter_node.cpp  voxel_based_approximate_compare_map_filter_nodelet.cpp  voxel_based_compare_map_filter_node.cpp  voxel_based_compare_map_filter_nodelet.cpp  voxel_distance_based_compare_map_filter_node.cpp  voxel_distance_based_compare_map_filter_nodelet.cpp
roi_cluster_fusion/: CMakeLists.txt  package.xml
roi_cluster_fusion/include/roi_cluster_fusion/: roi_cluster_fusion_nodelet.h
roi_cluster_fusion/launch/: roi_cluster_fusion.launch
roi_cluster_fusion/src/: roi_cluster_fusion_node.cpp  roi_cluster_fusion_nodelet.cpp
sensor_launch/: CMakeLists.txt  package.xml
sensor_launch/data/: camera.yaml
sensor_launch/launch/: sensor.launch
sensor_launch/urdf/: sensor.xacro
shape_estimation/: CMakeLists.txt  package.xml
shape_estimation/launch/: shape_estimation.launch
shape_estimation/src/: main.cpp  node.cpp  shape_estimator.cpp
tensorrt_yolo3/: CMakeLists.txt  datayolov3_416_trt.prototxt  package.xml
tensorrt_yolo3/include/: tensorrt_yolo3_ros.h
tensorrt_yolo3/launch/: tensorrt_yolo3.launch
tensorrt_yolo3/src/: tensorrt_yolo3_main.cpp  tensorrt_yolo3_ros.cpp
vector_map_msgs/: CMakeLists.txt  package.xml
vision_darknet_detect/: CMakeLists.txt  package.xml
vision_darknet_detect/launch/: vision_yolo3_detect.launch
vision_darknet_detect/src/: vision_darknet_detect.cpp  vision_darknet_detect.h
(+44 files in other folders)
