<?xml version="1.0"?>
<package format="2">
  <name>perception_launch</name>
  <version>0.0.0</version>
  <description>The perception_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yukihiro@todo.todo">yukihiro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_object_visualization</build_depend>
  <build_depend>euclidean_cluster</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_depend>shape_estimation</build_depend>
  <build_export_depend>dynamic_object_visualization</build_export_depend>
  <build_export_depend>euclidean_cluster</build_export_depend>
  <build_export_depend>pointcloud_to_laserscan</build_export_depend>
  <build_export_depend>shape_estimation</build_export_depend>
  <exec_depend>dynamic_object_visualization</exec_depend>
  <exec_depend>euclidean_cluster</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>shape_estimation</exec_depend>

  <export>
  </export>
</package>
